--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,9 @@
 :root {
   --bg: #0a0a0f;
   --text: #ffffff;
-  --accent: #ffe600;
+  --accent: #11ff00;
   --card: #1a1a1f;
-  --button: #2a2a2f;
+  --button: black;
   --hover: #3a3a4f;
 }
 
@@ -59,6 +59,20 @@ header {
 
 .controls button:hover {
   background: var(--hover);
+}
+
+
+.about {
+  background-color: #000;
+  color: #11ff00;
+  text-align: center;
+  align-items: center;
+  align-content: center;
+  align-self: center;
+  justify-items: center;
+  border-radius: 10px;
+  margin: 20px;
+  padding: 20px;
 }
 
 .intro {
